adding english as a second language

--- a/en/contact.html
+++ b/en/contact.html
@@ -26,79 +26,45 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link active" href="contact.html">Contact</a>
                     </li>
                 </ul>
-                <a href="../" class="btn btn-primary ml-auto">Polish</a>
+                <a href="../kontakt.html" class="btn btn-primary ml-auto">Polish</a>
             </div>
         </div>
     </nav>
 
-    <section class="text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <div class="maintxt">
-                        <p class="hello">Marcin Kiełbik</p>
-                        <strong>
-                            <h2 class="">Portfolio website</h2>
-                        </strong>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section class="py-5 text-center">
         <div class="container">
-            <h2 class="mb-4">About me</h2>
-            <p class="description">I am passionate with web and mobile development and I have deep knowledge about technologies like Angular, ASP.NET and Apple Swift.</p>
+            <h2>Contact details</h2>
+            <table class="table table-dark mt-5">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Name</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">Email</th>
+                    <td>me@gmail.com</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">linkedin</th>
+                    <td>link</td>
+                  </tr>
+                </tbody>
+              </table>
         </div>
     </section>
 
-    <section class="py-5 text-center bg-b">
-        <div class="container">
-            <h2 class="mb-5">Technologies</h2>
-            <div class="row">
-                <div class="col-lg-4">
-                    <img class="logo" src="../img/Angular_full_color_logo.svg.png" alt="">
-                    <figcaption>Angular</figcaption>
-                </div>
-                <div class="col-lg-4 my-auto">
-                    <img class="logo" src="../img/NET_Core_Logo.svg.png" alt="">
-                    <figcaption>ASP.NET Core</figcaption>
-
-                </div>
-                <div class="col-lg-4">
-                    <img class="logo" src="../img/swift-og.png" alt="">
-                    <figcaption>Swift</figcaption>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="py-5 text-center">
-        <div class="container">
-            <h2 class="pb-5">Projekty</h2>
-
-            <div class="row">
-                <div class="col">
-                    <img style="width: 350px; border-radius: 10px;" src="../img/github2018-logo655.png" alt="">
-                    <figcaption>MarcinKielbik</figcaption>
-                </div>
-                <div class="col">
-                   <h2>All project</h2>
-                   <a href="projects.html" class="btn btn-danger ml-auto mt-4">Projects</a>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <footer class="bg-primary">
         <div class="text-center p-4">
