--- a/en/projects.html
+++ b/en/projects.html
@@ -17,7 +17,7 @@
 <body>
     <nav class="navbar navbar-expand-lg py-3 navbar-dark sticky-top">
         <div class="container">
-            <a class="navbar-brand text-primary" href="/">PortfolioMK</a>
+            <a class="navbar-brand text-primary" href="index.html">PortfolioMK</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -26,77 +26,38 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Strona główna</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="projekty.html">Projekty</a>
+                        <a class="nav-link active" href="projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="kontakt.html">Kontakt</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
-                <a href="en/" class="btn btn-primary ml-auto">English</a>
+                <a href="../projekty.html" class="btn btn-primary ml-auto">Polish</a>
             </div>
         </div>
     </nav>
 
-    <section class="text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <div class="maintxt">
-                        <p class="hello">Marcin Kiełbik</p>
-                        <strong>
-                            <h2 class="">Strona portfolio</h2>
-                        </strong>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <section class="py-5 text-center">
         <div class="container">
-            <h2 class="mb-4">O mnie</h2>
-            <p class="description">Jestem pasjonatem programowania z głęboką wiedzą i doświadczeniem w technologiach
-                Angular, ASP.NET Core i Apple Swift. Moje portfolio to zbiór projektów,
-                które odzwierciedlają moje umiejętności i kreatywność w tworzeniu innowacyjnych rozwiązań.</p>
+            <h2>Projects</h2>
+            <p class="description mt-5">I am passionate with web and mobile development and I have deep knowledge about technologies like Angular, ASP.NET and Apple Swift.</p>
         </div>
     </section>
 
     <section class="py-5 text-center bg-b">
         <div class="container">
-            <h2 class="mb-5">Technologie</h2>
-            <div class="row">
-                <div class="col-lg-4">
-                    <img class="logo" src="img/Angular_full_color_logo.svg.png" alt="">
-                    <figcaption>Angular</figcaption>
-                </div>
-                <div class="col-lg-4 my-auto">
-                    <img class="logo" src="img/NET_Core_Logo.svg.png" alt="">
-                    <figcaption>ASP.NET Core</figcaption>
-
-                </div>
-                <div class="col-lg-4">
-                    <img class="logo" src="img/swift-og.png" alt="">
-                    <figcaption>Swift</figcaption>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="py-5 text-center">
-        <div class="container">
-            <h2 class="pb-5">Projekty</h2>
+            <h2 class="pb-5">Github</h2>
 
             <div class="row">
                 <div class="col">
-                    <img style="width: 350px; border-radius: 10px;" src="img/github2018-logo655.png" alt="">
+                    <img style="width: 350px; border-radius: 10px;" src="../img/github2018-logo655.png" alt="">
                     <figcaption>MarcinKielbik</figcaption>
                 </div>
                 <div class="col">
-                    <p>Zrealizowane projekty znajdziesz na githubie</p>
-                    <p>Koniecznie zajrzyj na te strony</p>
+                    <h2 class="text-center">Github repositories</h2>
                     <ul>
                         <ol><a href="https://marcinkielbik.github.io/Zegar/">Zegar</a></ol>
                         <ol><a href="https://github.com/MarcinKielbik/Computer-science-quiz">Computer-science-quiz</a></ol>
