--- a/projekty.html
+++ b/projekty.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="UTF-8">
@@ -26,39 +26,24 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Strona główna</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Strona główna</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="projekty.html">Projekty</a>
+                        <a class="nav-link active" href="projekty.html">Projekty</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="kontakt.html">Kontakt</a>
                     </li>
                 </ul>
-                <a href="en/index.html" class="btn btn-primary ml-auto">English</a>
+                <a href="en/projects.html" class="btn btn-primary ml-auto">English</a>
             </div>
         </div>
     </nav>
 
-    <section class="text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <div class="maintxt">
-                        <p class="hello">Marcin Kiełbik</p>
-                        <strong>
-                            <p class="">Strona portfolio</p>
-                        </strong>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <section class="py-5 text-center">
         <div class="container">
-            <h2>O mnie</h2>
-            <p class="description">Jestem pasjonatem programowania z głęboką wiedzą i doświadczeniem w technologiach
+            <h2>Projekty</h2>
+            <p class="description mt-5">Jestem pasjonatem programowania z głęboką wiedzą i doświadczeniem w technologiach
                 Angular, ASP.NET Core i Apple Swift. Moje portfolio to zbiór projektów,
                 które odzwierciedlają moje umiejętności i kreatywność w tworzeniu innowacyjnych rozwiązań.</p>
         </div>
@@ -66,28 +51,7 @@
 
     <section class="py-5 text-center bg-b">
         <div class="container">
-            <h2 class="">Technologie</h2>
-            <div class="row">
-                <div class="col-lg-4">
-                    <img class="logo" src="img/Angular_full_color_logo.svg.png" alt="">
-                    <figcaption>Angular</figcaption>
-                </div>
-                <div class="col-lg-4 py-4">
-                    <img class="logo" src="img/NET_Core_Logo.svg.png" alt="">
-                    <figcaption>ASP.NET Core</figcaption>
-
-                </div>
-                <div class="col-lg-4">
-                    <img class="logo" src="img/swift-og.png" alt="">
-                    <figcaption>Swift</figcaption>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="py-5 text-center">
-        <div class="container">
-            <h2 class="pb-5">Projekty</h2>
+            <h2 class="pb-5">Github</h2>
 
             <div class="row">
                 <div class="col">
@@ -98,11 +62,9 @@
                     <p>Zrealizowane projekty znajdziesz na githubie</p>
                     <p>Koniecznie zajrzyj na te strony</p>
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <ol><a href="https://marcinkielbik.github.io/Zegar/">Zegar</a></ol>
+                        <ol><a href="https://github.com/MarcinKielbik/Computer-science-quiz">Computer-science-quiz</a></ol>
+                        <ol><a href="https://github.com/MarcinKielbik/Poznaj-technologie-webowe">Poznaj-technologie-webowe</a></ol>
                     </ul>
                 </div>
             </div>
